<resources>
    <string name="app_name">InstaKloneApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out_sett_fragment">Log Out</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_code">Enter Code</string>
    <string name="image_logoh_ome">ImageLogo</string>
    <string name="camera_home">Camera Home</string>
    <string name="direct_home">Direct Home</string>
    <string name="back_profile">Back profile</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="customer_customer">Customer Customer</string>
    <string name="following">following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="web_site">Web site</string>
    <string name="loading">Loading…</string>
    <string name="next">Next</string>
    <string name="sharedcloseimage">SharedCloseImage</string>
    <string name="shared_selected_image">Shared Selected Image</string>
    <string name="change_profile">Change Profile</string>
    <string name="name_profile">Name</string>
    <string name="name_etprofile">Name</string>
    <string name="username">Username</string>
    <string name="timer">Timer</string>
</resources>